--- a/.github/workflow/simple.yml
+++ b/.github/workflow/simple.yml
@@ -5,3 +5,10 @@ on: [push]
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
+    steps: 
+      - name: echo a string
+        run: echo " Hello World"
+      - name: multiline script
+        run: |
+          node -v
+          npm -v
