--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,3 +17,12 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+
+  run-window-command:
+    run-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
