fixes typo of run-on

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,7 +19,7 @@ jobs:
         shell: python
 
   run-window-command:
-    run-on: windows-latest
+    runs-on: windows-latest
     steps:
       - name: Directory Powershell
         run: Get-Location
