--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -20,6 +20,7 @@ jobs:
 
   run-window-command:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Directory Powershell
         run: Get-Location
