--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,4 +7,9 @@ run-github-actions:
   runs-on: ubuntu-latest
   steps: 
     - name: Simple JS Action
+      id: greet
       uses: actions/hello-world-javascript-action@v1
+      with: 
+        who-to-greet: Low
+    - name: Log greeting time
+      run: echo "${{ steps.greet.outputs.time }}"
