--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
           pwd 
           ls
       - name: List File after Checkout
-        uses: action/checkout@v1
+        uses: actions/checkout@v1
         run: |
           pwd
           ls -a
