--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,12 +3,19 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest,ubuntu-latest,window-latest]
+        node_version: [6,8,10]
+      
+
+      #fail-fast: true #if one of these fail, other will stop
+    runs-on: ${{matrix.os}}
     steps:
       - name: Log node version
         run: node -v
       - uses: actions/setup-node@v1
         with:
-          node-version: 6
+          node-version: ${{ matrix.node_version }}
       - name: Log node version after uses
         run: node -v
